# rail_pick_and_place

./: .travis.yml  AUTHORS.md  README.md
graspdb/: CHANGELOG.rst  CMakeLists.txt  package.xml
graspdb/include/graspdb/: Client.h  Entity.h  Grasp.h  GraspDemonstration.h  GraspModel.h  Model.h  Orientation.h  Pose.h  Position.h  graspdb.h
graspdb/src/: Client.cpp  Entity.cpp  Grasp.cpp  GraspDemonstration.cpp  GraspModel.cpp  Model.cpp  Orientation.cpp  Pose.cpp  Position.cpp
rail_grasp_collection/: CHANGELOG.rst  CMakeLists.txt  package.xml
rail_grasp_collection/action/: Pickup.action
rail_grasp_collection/include/rail_grasp_collection/: GraspCollector.h  GraspRetriever.h  graspCollection.h  graspLogger.h  objectTracker.h
rail_grasp_collection/launch/: grasp_collection_nodes.launch  rail_grasp_collection.launch  rail_grasp_collection_and_retriever.launch  rail_grasp_retriever.launch
rail_grasp_collection/nodes/: rail_grasp_collection.cpp  rail_grasp_retriever.cpp
rail_grasp_collection/src/: GraspCollector.cpp  GraspRetriever.cpp  graspCollection.cpp  graspLogger.cpp  objectTracker.cpp
rail_grasp_collection/srv/: ClosestObject.srv
rail_grasping/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
rail_grasping/include/rail_grasping/: graspObject.h
rail_grasping/msg/: GraspModel.msg
rail_grasping/src/: graspObject.cpp  graspObject_approach_angle_method.cpp  graspObject_back.cpp  graspObject_top_approach.cpp
rail_grasping/srv/: RequestGrasp.srv
rail_pick_and_place/: CHANGELOG.rst  CMakeLists.txt  package.xml
rail_pick_and_place_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
rail_pick_and_place_msgs/action/: GenerateModels.action  GetYesNoFeedback.action  GraspAndStore.action  RetrieveGraspDemonstration.action  RetrieveGraspModel.action  StoreGrasp.action  TrainMetrics.action
rail_pick_and_place_msgs/msg/: GraspDemonstration.msg  GraspModel.msg  GraspWithSuccessRate.msg  Model.msg
rail_pick_and_place_msgs/srv/: GraspRecognized.srv  PickupObject.srv  PickupSegmentedObject.srv  RecognizeAndGrasp.srv  TrainMetrics.srv
rail_pick_and_place_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
rail_pick_and_place_tools/include/rail_pick_and_place_tools/: GraspCollectionPanel.h  MetricTrainingPanel.h  ModelGenerationPanel.h  SegmentPanel.h  VisionPanel.h
rail_pick_and_place_tools/launch/: model_generation_backend.launch  model_generation_frontend.launch  rail_pick_and_place_backend.launch  rail_pick_and_place_frontend.launch
rail_pick_and_place_tools/rviz/: frontend.rviz  model_generation.rviz
rail_pick_and_place_tools/src/: GraspCollectionPanel.cpp  MetricTrainingPanel.cpp  ModelGenerationPanel.cpp  SegmentPanel.cpp  VisionPanel.cpp
rail_pick_and_place_wrapper/: CHANGELOG.rst  CMakeLists.txt  package.xml
rail_pick_and_place_wrapper/include/rail_pick_and_place_wrapper/: pick_and_place.h
rail_pick_and_place_wrapper/launch/: pick_and_place.launch
rail_pick_and_place_wrapper/src/: pick_and_place.cpp
rail_recognition/: CHANGELOG.rst  CMakeLists.txt  feature_vectors.txt  package.xml  plugin_description.xml
rail_recognition/action/: GenerateModels.action
rail_recognition/data/saveddata/: orb_dictionary.yml  recognitionNeuralNet.yml  sift_dictionary.yml  surf_dictionary.yml
rail_recognition/include/rail_recognition/: GraspModelRetriever.h  GraspReader.h  ImageRecognizer.h  MetricTrainer.h  Model.h  ModelGenerationPanel.h  ModelGenerator.h  ObjectRecognitionListener.h  ObjectRecognizer.h  PCLGraspModel.h  PCRecognition.h  PCRecognizer.h  PCRegistration.h  PointCloudMetrics.h  PointCloudRecognizer.h  pcRecognition.h  pcRegistration.h  pcSaver.h
rail_recognition/launch/: collect_images.launch  generate_models.launch  metric_trainer.launch  metric_trainier.launch  model_generation_frontend.launch  model_generator.launch  object_recognition_listener.launch  object_recognizer.launch  rail_grasp_model_retriever.launch  recognition.launch  save_image_recognizer_features.launch  tabletop_detector_standalone.launch
rail_recognition/models/: model_1.txt  model_2.txt  model_3.txt  model_4.txt  model_5.txt  model_6.txt  model_7.txt
rail_recognition/nodes/: collect_images.cpp  metric_trainer.cpp  model_generator.cpp  object_recognition_listener.cpp  object_recognizer.cpp  rail_grasp_model_retriever.cpp  save_image_recognizer_features.cpp  test_image_recognizer.cpp  train_image_recognizer.cpp
rail_recognition/rviz/: model_generation.rviz
rail_recognition/src/: GraspModelRetriever.cpp  GraspReader.cpp  ImageRecognizer.cpp  MetricTrainer.cpp  ModelGenerationPanel.cpp  ModelGenerator.cpp  ObjectRecognitionListener.cpp  ObjectRecognizer.cpp  PCLGraspModel.cpp  PCRecognition.cpp  PCRecognizer.cpp  PCRegistration.cpp  PointCloudMetrics.cpp  PointCloudRecognizer.cpp  pcRecognition.cpp  pcRegistration.cpp  pcSaver.cpp
rail_recognition/srv/: DisplayModel.srv  GenerateModels.srv  GetModelNumbers.srv  ReadGrasp.srv  Release.srv
