<package>
  <name>graspdb</name>
  <version>0.0.2</version>
  <description>Grasp Training SQL Database Client Library</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <url type="website">http://ros.org/wiki/graspdb</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_pick_and_place/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/rail_pick_and_place</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpqxx-dev</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>libpqxx-dev</run_depend>
  <run_depend>roscpp</run_depend>
</package>

