<package>
  <name>graspdb</name>
  <version>1.1.3</version>
  <description>Grasp Training SQL Database Client Library</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <url type="website">http://ros.org/wiki/graspdb</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_pick_and_place/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/rail_pick_and_place</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpqxx-dev</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rail_pick_and_place_msgs</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>

  <run_depend>libpqxx-dev</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rail_pick_and_place_msgs</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2</run_depend>
</package>

