<package>
  <name>rail_grasp_collection</name>
  <version>1.1.3</version>
  <description>Grasp Collection for Constructing a Grasping and Recognition Database</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <author email="davidkent@wpi.edu">David Kent</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_grasp_collection</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_pick_and_place/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/rail_pick_and_place</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>graspdb</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>
  <build_depend>rail_pick_and_place_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>graspdb</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
  <run_depend>rail_pick_and_place_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>
</package>
