<?xml version="1.0"?>
<package>
  <name>rail_grasping</name>
  <version>0.1.1</version>
  <description>Grasping for use with the grasp_learning package</description>
  
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>carl_moveit</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>wpi_jaco_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>actionlib</run_depend>
  <run_depend>carl_moveit</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>wpi_jaco_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
