<package>
  <name>rail_pick_and_place</name>
  <version>0.0.1</version>
  <description>Pick and Place Functionality for CARL in the RAIL Lab</description>

  <author email="davidkent@wpi.edu">David Kent</author>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_pick_and_place</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_pick_and_place/issues</url>
  <url type="repository">https://github.com/WPI-RAILrail_pick_and_place</url>
 
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rail_grasp_collection</run_depend>
  <run_depend>rail_grasping</run_depend>
  <run_depend>rail_pick_and_place_msgs</run_depend>
  <run_depend>rail_pick_and_place_wrapper</run_depend>
  <run_depend>rail_recognition</run_depend>

  <export>
    <metapackage />
  </export>
</package>
