<package>
  <name>rail_pick_and_place</name>
  <version>1.1.3</version>
  <description>Grasp Training and Pick and Place Methods Developed by the RAIL Lab</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <author email="davidkent@wpi.edu">David Kent</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_pick_and_place</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_pick_and_place/issues</url>
  <url type="repository">https://github.com/WPI-RAILrail_pick_and_place</url>
 
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>graspdb</run_depend>
  <run_depend>rail_grasp_collection</run_depend>
  <run_depend>rail_pick_and_place_msgs</run_depend>
  <run_depend>rail_pick_and_place_tools</run_depend>
  <run_depend>rail_recognition</run_depend>

  <export>
    <metapackage />
  </export>
</package>
