<package>
  <name>rail_pick_and_place_msgs</name>
  <version>1.1.3</version>
  <description>Messages and Services for RAIL Pick and Place</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <author email="davidkent@wpi.edu">David Kent</author>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_pick_and_place_msgs</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_pick_and_place/issues</url>
  <url type="repository">https://github.com/WPI-RAILrail_pick_and_place</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>
</package>
