<package>
  <name>rail_pick_and_place_tools</name>
  <version>1.1.3</version>
  <description>RViz Plugins for Collecting Grasps and Generating Models</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <author email="davidkent@wpi.edu">David Kent</author>
  <maintainer email="davidkent@wpi.edu">David Kent</maintainer>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rail_pick_and_place_tools</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/rail_pick_and_place/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/rail_pick_and_place</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>graspdb</build_depend>
  <build_depend>rail_pick_and_place_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>graspdb</run_depend>
  <run_depend>rail_grasp_collection</run_depend>
  <run_depend>rail_pick_and_place_msgs</run_depend>
  <run_depend>rail_recognition</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_srvs</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml" />
  </export>
</package>
